--- a/css/common.css
+++ b/css/common.css
@@ -113,6 +113,7 @@ section {
 }
 
 body {
+    color: #444;
     line-height: 1;
 }
 
@@ -143,3 +144,15 @@ table {
     border-collapse: collapse;
     border-spacing: 0;
 }
+
+img {
+    max-width: 100%;
+    vertical-align: middle;
+}
+
+address {
+    font-style: normal;
+}
+
+
+
