--- a/css/style.css
+++ b/css/style.css
@@ -139,7 +139,7 @@
 
 .main_visual .main_slide .slogan p {
     margin: 0 0 30px 0;
-    
+
     font-size: 30px;
     font-weight: 300;
     color: #fff;
@@ -214,7 +214,7 @@
     font-size: 30px;
     font-weight: 700;
     margin: 0 0 10px 0;
-    
+
 }
 
 .main_content .tit p {
@@ -273,13 +273,14 @@
     border-bottom: 1px solid #777;
 }
 
-.footer .top .inner{
+.footer .top .inner {
     text-align: center;
 }
 
-.footer .top .inner>ul{
-    font-size: 15px;
+.footer .top .inner>ul {
     display: flex;
+    justify-content: center;
+    font-size: 15px;
     gap: 30px;
 }
 
@@ -288,6 +289,6 @@
 }
 
 
-.footer address ul>li{
+.footer address ul>li {
     font-size: 12px;
 }
